disable initialize if not domEl

--- a/test/index.html
+++ b/test/index.html
@@ -37,6 +37,7 @@
     new logo_footer_magic({elem: 'box1', color: '#ffffff', prefix: 'w-'});
     new logo_footer_magic({elem: 'box2', color: '#181c27', prefix: 'b-'});
     new logo_footer_magic({elem: 'box3', color: '#ee0000', prefix: 'r-'});
+    new logo_footer_magic({elem: 'box4', color: '#ee0000', prefix: 'r-'});
   </script>
 </body>
 </html>
